profilelist1exp/unpackaged/objects/Supportability_Field_History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <formula>IF( ISBLANK(Old_Value__c) &amp;&amp; NOT(ISBLANK(New_Value__c)) , 
&apos;Changed &apos; +  Field_Name__c  + &apos; to &apos; +  New_Value__c, 
IF( NOT(ISBLANK(Old_Value__c)) &amp;&amp; ISBLANK(New_Value__c),
&apos;Deleted &apos; + Old_Value__c + &apos; in &apos; + Field_Name__c,
&apos;Changed &apos; +  Field_Name__c  + &apos; from &apos; +  Old_Value__c + &apos; to &apos; +  New_Value__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <formula>Opportunity__r.Deal_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name_API__c</fullName>
        <label>Field Name API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By_Email__c</fullName>
        <formula>LastModifiedBy.Email</formula>
        <label>Modified By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <formula>Opportunity__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.LastName &amp; &apos;, &apos; &amp; Opportunity__r.Owner.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Record_Id__c, Record_Id__c, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Supportability Field History</relationshipLabel>
        <relationshipName>Supportability_Field_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Id__c</fullName>
        <label>Parent Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Opportunity Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supportability_Field_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supportability Field History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OLI-{000000}</displayFormat>
        <label>History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supportability Field History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>